JENKINS-47552: upd UUID field visible #p2
1. Allow setting queue UUID manually at configuration phase
2. Allow editing existing UUID but exposing in "Advanced" visual area
3. Validate UUID as *unique*

Signed-off-by: Victor Timohin <vvt@opsguru.io>
Signed-off-by: Maxim Kovgan <max@opsguru.io>

--- a/src/main/resources/io/relution/jenkins/awssqs/i18n/sqstriggerqueue/Messages_de.properties
+++ b/src/main/resources/io/relution/jenkins/awssqs/i18n/sqstriggerqueue/Messages_de.properties
@@ -5,3 +5,4 @@ infoUrlSqs=Sie können \"%s\" anstelle der vollständigen URL verwenden
 warningUrl=Name oder URL einer SQS Queue ist erforderlich
 errorUrlCodecommit=Dies ist eine CodeCommit URL, bitte Name einer Queue oder SQS URL angeben
 errorUrlUnknown=Dies ist keine SQS URL, bitte Name einer Queue oder SQS URL angeben
+errorUuid=UUID ist nicht einzigartig
