--- a/src/main/resources/io/relution/jenkins/awssqs/SQSTriggerQueue/config_de.properties
+++ b/src/main/resources/io/relution/jenkins/awssqs/SQSTriggerQueue/config_de.properties
@@ -5,5 +5,6 @@ AWS\ access\ key\ ID=AWS Access Key ID
 AWS\ secret\ key=AWS Secret Key
 Test\ access=Zugang prüfen
 Advanced=Erweitert
+UUID=UUID
 Request\ wait\ time\ [s]=Wartezeit für Requests [s]
 Max.\ number\ of\ messages=Max. Anzahl an Nachrichten
